syntax = "proto3";

option go_package = "github.com/kiaedev/kiae/api/egress";

package egress;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "kiae/op_status.proto";
import "kiae/request.proto";


service EgressService {
    rpc List (ListRequest) returns (ListResponse) {
        option (google.api.http) = {
            get: "/api/v1/apps/{appid}/egress"
        };
    }
    rpc Create (Egress) returns (Egress) {
        option (google.api.http) = {
            post: "/api/v1/apps/{appid}/egress"
            body: "*"
        };
    }
    rpc Update (Egress) returns (Egress) {
        option (google.api.http) = {
            put: "/api/v1/apps/{appid}/egress/{id}",
            body: "*",
            additional_bindings: {
                patch: "/api/v1/apps/{appid}/egress/{id}"
                body: "*"
            }
        };
    }
    rpc Delete (kiae.IdRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/v1/apps/{id}/egress/{id}"
        };
    }
}

message ListRequest {
    string appid = 1;
    string name = 2;
}

message ListResponse {
    repeated Egress items = 1;
    int64 total = 2;
}

message Egress {
    string id = 1; // @gotags: bson:"_id,omitempty"
    string appid = 2;
    enum Type {
        INTERNAL = 0;
        INTERNET = 1;
    }
    Type type = 5;
    string name = 6;
    string host = 7;
    uint32 port = 8;
    string protocol = 9;
    kiae.OpStatus status = 10;

    google.protobuf.Timestamp created_at = 101; // @gotags: bson:"created_at,omitempty"
    google.protobuf.Timestamp updated_at = 103; // @gotags: bson:"updated_at,omitempty"
}